--- a/index.html
+++ b/index.html
@@ -7,25 +7,21 @@
   </head>
   <body>
     <h1>Twittler</h1>
-  	<input type="button" value="New" onclick="function a(){
-  		">
-
+  	<input type="button" value="New" onclick=s()>
+    <br>
     <script>
-
-      $(document).ready(function(){
+      function s(){
+      	$("div").remove()
         var $body = $('body');
         var index = streams.home.length - 1;
         while(index >= 0){
           var tweet = streams.home[index];
           var $tweet = $('<div></div>');
-          $tweet.text('@' + tweet.user + ': ' + tweet.message);
+          $tweet.text('@' + tweet.user + ': ' + tweet.message +", time: "+tweet.created_at);
           $tweet.appendTo($body);
-          index -= 1;
+          index --;
         }
-
-      });
-
+      }
     </script>
-
   </body>
 </html>
